--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milou's portfolio</title>
   </head>
-  <body>
+  <body class="dark:bg-slate-800 ">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
